Mon Sep 13 15:16:33 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DAnCE/tests/NodeApplicationTest/run_test.pl:
	* DAnCE/tests/NodeApplicationTest/run_test_ex.pl:
	* DAnCE/tests/NodeApplicationTest/run_test_simple.pl:

	  Fixed the paths in the scripts.

Mon Sep 13 07:11:06 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Servant_Activator.cpp:
	* ciao/Port_Activator.h:
	* ciao/Servant_Activator.cpp:

	  Fixes for MSVC++ compilation errors. Inspite of being careful I
	  introduced a couple of VC++ anathemas.

Mon Sep 13 06:16:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/Container_Base.cpp:
	* ciao/Container_Base.cpp:

	  Fixed wrong ACE_CHECK usage. This should fix compilation errors
	  in Full_Reactors build.

Mon Sep 13 04:20:44 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/CCM_Core.mpc:

	  Removed iorinterceptor and objreftemplate from CIAO_DnC_Server
	  project. No reason to believe that they need thes. This should
	  hopefully remove the warnings in our daily builds.
	
	* examples/Hello/Sender/Sender_exec.cpp:

	  Added a simple debug statement. 
	
	* performance-tests/Benchmark/Benchmark.mpc:

	  Tried fixing the link errors on the scoreboard.

Mon Sep 13 03:50:08 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/CCM_Core.mpc:
	* DAnCE/ciao/Container_Base.cpp:
	* DAnCE/ciao/Container_Base.h:
	* DAnCE/ciao/Container_Base.inl:
	* DAnCE/ciao/Port_Activator.cpp:
	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Port_Activator_T.cpp:
	* DAnCE/ciao/Port_Activator_T.h:
	* DAnCE/ciao/Servant_Activator.cpp:
	* DAnCE/ciao/Servant_Activator.h:

	  Replicated changes to DAnCE. DAnCE testing hasn't been completed
	  yet. 

Sun Sep 12 22:10:38 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:
