@@ -1,3 +1,9 @@
+Mon Sep 13 13:07:33 2004  Gan Deng  <gan.deng@vanderbilt.edu>
+
+	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
+
+          Fixed a bug inside create_connections () method.
+
 Mon Sep 13 15:16:33 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* DAnCE/tests/NodeApplicationTest/run_test.pl:
